--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,15 @@ uncompressed_data
 compressed_data
 *.pyc
 *.cpython-310.pyc
-sqlite.sqlite3
+csv_data
 
+# Machine Learning
+data/processed/
+data/features/
+models_trained/
+*.pkl
+*.png
+*.jpg
+__pycache__/
+*.py[cod]
+*$py.class
